tests/snapshots/engine__stl003_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "STL003",
    "message": "A commit or build identifier is embedded in a long-lived document.",
    "filename": "docs/guide.md",
    "location": {
      "row": 4,
      "column": 41
    },
    "end_location": {
      "row": 4,
      "column": 48
    },
    "byte_range": {
      "start": 62,
      "end": 69
    },
    "fix": null,
    "url": null,
    "related": [],
    "suggestion": "Point to the command or release record that provides the identifier."
  }
]
